...
    "button.gotIt" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "I got it"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "I got it"
...
    "button.hearAnswer" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hear the answer"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hear the answer"
...
    "button.nextQuestion" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next question"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Next question"
...
    "button.start" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start listening"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start listening"
...
    "listen.acceptableAnswer" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ACCEPTABLE ANSWER"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "ACCEPTABLE ANSWER"
...
    "listen.appTitle" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Civics Audio Prep"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Civics Audio Prep"
...
    "tab.test" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Test"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Test"
...
    "test.start" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start practice test"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start practice test"
...
